update minecraft forge version ver to 1.0.0

--- a/build.gradle
+++ b/build.gradle
@@ -17,12 +17,12 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.0"
+version = "1.0.0"
 group= "mmdanggg2.cste" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "cste"
 
 minecraft {
-    version = "1.8-11.14.0.1289-1.8"
+    version = "1.8-11.14.0.1299"
     runDir = "eclipse"
     
     // the mappings can be changed at any time, and must be in the following format.
