change build name

--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ apply plugin: 'forge'
 
 version = "1.0.0"
 group= "mmdanggg2.cste" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "cste"
+archivesBaseName = "CSTEMod-[1.8]"
 
 minecraft {
     version = "1.8-11.14.0.1299"
